Overflow scroll for Chrome bug

--- a/css/style.less
+++ b/css/style.less
@@ -496,7 +496,7 @@ input, textarea, select {
     border-left: 1px solid @border-color;
     display: none;
     height: 100%;
-    overflow-y: auto;
+    overflow-y: scroll;
     padding: 15px;
     position: absolute;
     right: 0;
